============ Version 0.65

2009-03-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* README: upd reqs
	* configure.in: 0.65

	* cut-n-paste/e-contact-entry/Makefile.am:
	* src/Makefile.am: Fix distcheck

2009-02-26  Bastien Nocera  <hadess@hadess.net>

	* src/phonemgr-chooser-button.c:
	* src/phonemgr-chooser-button.h: Remove

	* configure.in:
	* data/phonemgr.glade:
	* src/Makefile.am:
	* src/app.h:
	* src/ui.c (chooser_created), (bluetooth_chooser_button_create),
	(set_dependent_widget): Remove use of the old gnome-bluetooth,
	and require the new one, which has its own Bluetooth device
	chooser button (Closes: #455838)

2009-02-05  Bastien Nocera  <hadess@hadess.net>

	* data/gnome-phone-manager.schemas.in:
	* data/phonemgr.glade:
	* libgsm/phonemgr-listener.c (phonemgr_listener_set_time):
	* src/connection.c (sync_clock), (on_status):
	* src/ui.c (get_ui), (ui_init): Patch from Daniele Forsi
	<dforsi@gmail.com> to allow setting the phone's time on
	connect (Closes: #456606)

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* data/phonemgr.glade: Add comment for translators about the
	delivery notification (Closes: #553177)

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* telepathy/im-channel.c (phoney_im_channel_get_interfaces),
	(chat_state_iface_init), (phoney_im_channel_send): A few more
	warning fixes

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_push),
	(phonemgr_listener_new_sms_cb), (phonemgr_listener_new_call_cb),
	(phonemgr_listener_cell_not_cb),
	(phonemgr_listener_parse_data_uuid), (phonemgr_listener_get_data),
	(phonemgr_listener_delete_data):
	* src/main.c:
	* src/phonemgr-chooser-button.c (set_btdevname),
	(phonemgr_chooser_button_class_init):
	* src/phonemgr-object.h:
	* src/ui.c (populate_prefs): Loads of warning fixes

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* src/e-phone-entry.h:
	* src/phonemgr-chooser-button.h: